--- a/features/project/views/project_settings.erb
+++ b/features/project/views/project_settings.erb
@@ -1,18 +1,34 @@
-<form method="POST" action="/projects/<%= project.id %>/save">
-  <h5>Project Name</h5>
-  <div class="mdl-textfield mdl-js-textfield">
-    <input class="mdl-textfield__input" type="text" name="project_name" value="<%= project.project_name %>">
-    <label class="mdl-textfield__label" for="project_name">Project Name</label>
+<div class="mdl-grid">
+  <div class="mdl-cell mdl-cell--8-col mdl-card mdl-shadow--2dp" style="padding: 18px">
+    <form method="POST" action="/projects/<%= project.id %>/save">
+      <h5>Project Name</h5>
+      <div class="mdl-textfield mdl-js-textfield">
+        <input class="mdl-textfield__input" type="text" name="project_name" value="<%= project.project_name %>">
+        <label class="mdl-textfield__label" for="project_name">Project Name</label>
+      </div>
+      <br />
+      <h5>Lane to run</h5>
+      <p><code>Fastfile</code> located at path <code><%= fastfile_path %></code></p>
+      <select name="selected_lane">
+        <% available_lanes.each do |current_lane| %>
+          <option value="<%= current_lane %>"><%= current_lane %></option>
+        <% end %>
+      </select>
+      <br />
+      <h5>Job Triggers</h5>
+        <% project.job_triggers.each do |trigger| %>
+          <span>Type:</span>
+          <select name="trigger.type">
+            <option value="commit">On new commits</option>
+            <option value="nightly">Nightly</option>
+            <option value="manual">Manually</option>
+          </select>
+          <span>Branch Name:</span>
+          <input class="mdl-textfield__input" type="text" name="trigger.branch" value="<%= trigger.branch %>">
+        <% end %>
+      <br />
+      <br />
+      <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit">Save</button>
+    </form>
   </div>
-  <br />
-  <h5>Lane to run</h5>
-  <p><code>Fastfile</code> located at path <code><%= fastfile_path %></code></p>
-  <select name="selected_lane">
-    <% available_lanes.each do |current_lane| %>
-      <option value="<%= current_lane %>"><%= current_lane %></option>
-    <% end %>
-  </select>
-  <br />
-  <br />
-  <input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" title="Save">
-</form>
+</div>
